# picorisc_asm

./: CMakeLists.txt  README.md
example/: add.hex  add.s  example.hex  example.s
src/: #lexer.h#  .#lexer.h  asm.c  lexer.c  lexer.h  parser.c  parser.h
